--- a/sass/partials/_hero.scss
+++ b/sass/partials/_hero.scss
@@ -2,9 +2,20 @@
 	background-color: #eee;
 	text-align: center;
 	.contain {
-		height: 400px;
+		height: 900px;
 		.titles {
 			@include vertical-align;
 		}
+	}
+	.overlay {
+		position: absolute;
+    width: 100%;
+    height: 900px;
+    background-color: rgba(0,0,0,0.8);
+    top: 0px;
+    bottom: 0px;
+	}
+	img {
+		max-width: 300px;
 	}
 }
