--- a/sass/theme.scss
+++ b/sass/theme.scss
@@ -8,6 +8,7 @@
 @import 'partials/hero';
 @import 'partials/bio';
 @import 'partials/whatis';
+@import 'partials/founder';
 
 // font
 @import url(https://fonts.googleapis.com/css?family=Quicksand:400,300,700);
@@ -17,6 +18,7 @@
 	max-width: 1200px;
 	margin: 0 auto;
 	padding: $contain-padding;
+	text-align: center;
 }
 
 .row { margin: 0px; }
