add press section

--- a/sass/theme.scss
+++ b/sass/theme.scss
@@ -9,6 +9,7 @@
 @import 'partials/bio';
 @import 'partials/whatis';
 @import 'partials/founder';
+@import 'partials/press';
 
 // font
 @import url(https://fonts.googleapis.com/css?family=Quicksand:400,300,700);
