--- a/sass/partials/_founder.scss
+++ b/sass/partials/_founder.scss
@@ -1,17 +1,24 @@
 #founder {
 	.contain {
 		padding-bottom: 140px;
+		p {
+			font-size: 18px;
+		}
 		.row {
 			padding-top: 100px;
 			.founder-col {
-				text-align: right;
+				text-align: left;
 			}
 			.nolo-col {
 				text-align: left;
+				padding-left: 60px;
+				svg {
+					fill: #303030;
+				}
 			}
 		}
 		img {
-			max-height: 200px;
+			max-height: 260px;
 		}
 	}
 	@media screen and (max-width: $break-small) {
