--- a/sass/partials/_hero.scss
+++ b/sass/partials/_hero.scss
@@ -19,3 +19,58 @@
   top: 0px;
   bottom: 0px;
 }
+
+#hero.video-hero {
+	position: relative;
+	background-color: black;
+	overflow: hidden;
+	@media screen and (max-width: 500px) {
+		min-height: 400px;
+	}
+	&:before {
+		content: '';
+		width: 100%;
+		height: 100%;
+		@media screen and (max-width: 500px) {
+			height: 0px;
+		}
+		position: absolute;
+		background-color: rgba(0,0,0,0.8);
+	}
+
+	video {
+		max-height: 100%;
+		width: 100%;
+		@media screen and (max-width: 500px) {
+			max-width: 200px;
+			display: none;
+		}
+	}
+	#logo {
+		@include vertical-align;
+		position: absolute;
+		text-align: center;
+		margin: 0 auto;
+		left: 0px;
+		right: 0px;
+		img {
+			opacity: 0;
+			@media screen and (max-width: 500px) {
+				max-width: 200px;
+			}
+		}
+	}
+	svg#logo-pilon {
+		display: block;
+		opacity: 0;
+		fill: white;
+		margin: 0 auto;
+		padding-top: 20px;
+		height: 112px;
+		left: 0px;
+		right: 0px;
+		@media screen and (max-width: 500px) {
+			width: 40px;
+		}
+	}
+}
